--- a/GuinnessGuideCore/GuinnessGuideCore.csproj
+++ b/GuinnessGuideCore/GuinnessGuideCore.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
+    <PackageReference Include="React.AspNet" Version="3.0.1" />
   </ItemGroup>
 
 </Project>
