--- a/GuinnessGuideCore/GuinnessGuideCore.csproj
+++ b/GuinnessGuideCore/GuinnessGuideCore.csproj
@@ -5,10 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\js\guide.jsx" />
+    <Content Include="wwwroot\js\MapsAPI.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="MiddleWare\" />
     <Folder Include="Views\Shared\" />
     <Folder Include="wwwroot\lib\" />
-    <Folder Include="wwwroot\js\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
