--- a/GuinnessGuideCore/GuinnessGuideCore.csproj
+++ b/GuinnessGuideCore/GuinnessGuideCore.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\css\easy-autocomplete.min.css" />
     <Content Include="wwwroot\js\guide.jsx" />
     <Content Include="wwwroot\js\MapsAPI.js" />
   </ItemGroup>
