--- a/GuinnessGuideCore/package.json
+++ b/GuinnessGuideCore/package.json
@@ -3,6 +3,12 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
+    "babel-core": "^6.3.17",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "expose-loader": "^0.7.1",
+    "webpack": "^1.12.9",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.1",
     "gulp-cssmin": "0.1.7",
