--- a/GuinnessGuideCore/GuinnessGuideCore.csproj
+++ b/GuinnessGuideCore/GuinnessGuideCore.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\Content\cities - Copy.json" />
+    <Content Include="wwwroot\Content\cities.json" />
     <Content Include="wwwroot\css\easy-autocomplete.min.css" />
     <Content Include="wwwroot\js\guide.jsx" />
     <Content Include="wwwroot\js\MapsAPI.js" />
