--- a/guinnessguideclient/package.json
+++ b/guinnessguideclient/package.json
@@ -6,7 +6,8 @@
     "google-maps-react": "^1.0.19",
     "invariant": "^2.2.2",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-tabs": "^1.1.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
